fixed button alignments and flash positioning

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -106,6 +106,9 @@
   color: #8a6d3b;
   background-color: #fcf8e3;
   border-color: #faebcc;
+  clear: both;
+  text-align: center;
+  margin-bottom: 0px;
 }
 
 .media-object{
@@ -142,8 +145,9 @@ hr{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  
-  // background-size: 100%;
+  border-bottom: 2px solid #404040;
+  border-radius: 0px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 #mainbg {
   background: image-url('newspaper.jpg');
@@ -160,14 +164,18 @@ hr{
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  // background-size: 100%;
+  border-bottom: 2px solid #404040;
+  border-radius: 0px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 #contactbg {
   background: image-url('contact-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  // background-size: 100%;
+  border-bottom: 2px solid #404040;
+  border-radius: 0px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 body {
   // padding-top: 100px;
@@ -425,7 +433,7 @@ footer .copyright {
   color: white;
 }
 .pager {
-  margin: 20px 0 0;
+  margin: 0px 0 0;
 }
 .pager li > a,
 .pager li > span,
